@@ -152,7 +152,7 @@
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/Minecraft/103/bootstrapperrrr.xml",
         "img": "mc.jpg"
     },
-    "Minecraft 1.5.2": {
+    "Minecraft 1.5.2 [Not Optimized]": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/Minecraft/15/bootstrapperrrr.xml",
         "img": "mc.jpg"
     },
@@ -160,7 +160,7 @@
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/Minecraft/18/bootstrapper_3.xml",
         "img": "mc.jpg"
     },
-    "Minecraft 1.12.2 [BEST OPTIMIZED VERSION]": {
+    "Minecraft 1.12.2": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/Minecraft/122/bootstrapper.xml",
         "img": "mc.jpg"
     },
@@ -1047,10 +1047,8 @@
         "Greedy Mimic",
         "Helix Jump 2",
         "Idle Dice",
-        "Minecraft 1.0.3",
-        "Minecraft 1.5.2",
         "Minecraft 1.8.8",
-        "Minecraft 1.12.2 [BEST OPTIMIZED VERSION]",
+        "Minecraft 1.12.2",
         "Moto X3M",
         "Paper.io 2",
         "Poly Track",
@@ -1082,7 +1080,7 @@
         "Yandere Simulator",
         "Bendy and the Ink Machine",
         "ULTRAKILL",
-        "Minecraft 1.12.2 [BEST OPTIMIZED VERSION]",
+        "Minecraft 1.12.2",
         "Minecraft 1.8.8",
         "Doki Doki Literature Club"
     ],
@@ -1136,7 +1134,7 @@
         "Five Nights at Freddy's",
         "Henry the Stickmin: Stealing the Diamond",
         "Learn to Fly",
-        "Minecraft 1.12.2 [BEST OPTIMIZED VERSION]",
+        "Minecraft 1.12.2",
         "Moto X3M",
         "Oregon Trail",
         "Pacman",
