@@ -353,7 +353,7 @@
         <center>
             <button onclick="window.open('https://forms.gle/iFA6kCTM8AcctsrEA')">Go to bug report form</button>
             <button onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Go to suggestion/feedback form</button>
-            <a href="mailto:nonamegamescontact@proton.me">My email (nonamegamescontact@proton.me)</a>
+            <a href="mailto:nonamegamescontact@proton.me" target="_blank">My email (nonamegamescontact@proton.me)</a>
         </center>
         <br/>
         <center>
@@ -532,10 +532,13 @@
             <b>A:</b> Press the fullscreen button (or F11) <b>before</b> launching the game. If that doesn't solve the issue send a bug report including the device you're using.<br></br>
             <b>Q:</b> Can you add [website]?<br/>
             <b>A:</b><b> No.</b> The only two websites on No Name Games (Unmonitored Google & Edubrain.ai) are special cases and are able to be added, 99% of sites cannot be added. The only way I could add websites is if I develop a proxy, which <b>may or may not come in the future.</b><br/>
-            
+            <b>Q:</b> Can you add Clash Royale/Fortnite/etc?<br/>
+            <b>A:</b><b> No.</b> Games not runnable in a browser (or require third-party emulators such as Clash Royale) are not possible.</b><br/>
+            <b>Q:</b> Can you add [online game]?<br/>
+            <b>A:</b><b> No.</b> Currently, online games aren't possible at this time. This may be possible <b>if</b> I develop a proxy in the future.<br/>
         <h1 class="centered" id="contact">Contact</h1>
         <p class="about-text">
-            Contact us at <a href="mailto:nonamegamescontact@proton.me">nonamegamescontact@proton.me</a>
+            Contact us at <a href="mailto:nonamegamescontact@proton.me" target="_blank">nonamegamescontact@proton.me</a>
         </p>
         <center><button class="nav-btn" onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Open Suggestion Form</button></center>
         <br />
